--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mailparser": "^3.6.5",
+    "smtp-server": "^3.13.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@types/mailparser": "^3.4.0",
+    "@types/smtp-server": "^3.5.7"
   },
   "name": "mail-server",
   "version": "1.0.0",
