--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "express": "^4.18.2",
     "mailparser": "^3.6.5",
+    "nodemailer": "^6.9.4",
     "smtp-server": "^3.13.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/mailparser": "^3.4.0",
+    "@types/nodemailer": "^6.4.9",
     "@types/smtp-server": "^3.5.7"
   },
   "name": "mail-server",
